# react-agent

./: .gitignore  README.md  project.code-workspace  pyproject.toml
src/react_agent/: agent.py  cli.py  settings.py
src/react_agent/prompts/: hotpot_qa_template.txt
src/react_agent/prompts/examples/: fever.json  hotpotqa.json
src/react_agent/tools/: __init__.py  base.py  finish.py  registry.py  wikipedia.py
