[project]
name = "react-agent"
version = "0.0.1"
description = "A ReAct-based AI agent for question answering using Wikipedia"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Martin Mkhitaryan", email = "mkhitaryan.martin@2000gmail.com"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "google-genai==1.32.0",
    "wikipedia-api==0.8.1",
]


[project.optional-dependencies]
dev = [
    "hatch~=1.0",
    "pytest~=8.0",
    "pytest-cov~=6.0",
]

[project.scripts]
react-agent = "react_agent.cli:main"

[project.urls]
Homepage = "https://github.com/martinmkhitaryan/react-agent"
Repository = "https://github.com/martinmkhitaryan/react-agent.git"
Documentation = "https://github.com/martinmkhitaryan/react-agent#readme"
Issues = "https://github.com/martinmkhitaryan/react-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

packages = [
    { include = "react_agent", from = "src" }
]

[tool.hatch.build.targets.sdist]
include = ["src/**", "README.md", "LICENSE", "pyproject.toml"]